--- a/Destapa-Cañerias/Camara-De-Registro-Cloacal.html
+++ b/Destapa-Cañerias/Camara-De-Registro-Cloacal.html
@@ -132,27 +132,27 @@ Ciudad de buenos aires (capital federal) destapaciones con maquina en ca&nacute;
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
+       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Area-de-observacion-de-urgencias.html">Area de observacion de urgencias </a> 
+       <a href="../Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Limpiar-Desague-Bantilde;o.html">Limpiar Desague Baño </a> 
+       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
+       <a href="../Servicios/Aguafuerte-para-desatascar-tuberias.html">Aguafuerte para desatascar tuberias </a> 
          </li>
 <!--EndPostsList-->
 
@@ -215,57 +215,57 @@ Ciudad de buenos aires (capital federal) destapaciones con maquina en ca&nacute;
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
+       <a href="../Servicios/Federal-Destapaciones.html">Federal Destapaciones </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
+       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
+       <a href="../Servicios/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-el-bantilde;o-con-un-gancho-de-ropa.html">Como destapar el baño con un gancho de ropa </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-bantilde;o-con-soda-caustica-inodoro.html">Como destapar baño con soda caustica inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Estrategias-para-Destapacion-cantilde;erias.html">Estrategias para Destapacion cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
+       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-De-Bantilde;o-Precio.html">Destapador De Baño Precio </a> 
+       <a href="../Servicios/Cantidad-de-inodoros-por-persona.html">Cantidad de inodoros por persona </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
+       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
